# vast-fastdetection

./: .dockerignore  .gitignore  Dockerfile  License  README.md  README_CONTAINER.md  create_jobscripts.py  create_slurm_jobs.py  get_chimap.py  get_footprints.py  get_gmap.py  get_gmap_short.py  get_overall_table.py  process_beam.py  pyproject.toml  rename_files.py  requirements.txt  run_all.py  run_all_parallel.py  run_all_single.py  run_candidates_plots.py  run_candidates_plots_pol.py  run_cube.py  run_cube_gaussian.py  run_cube_parallel.py  run_cube_single.py  run_everything.sh  run_everything_for_bash.sh  run_everything_ozstar.sh  run_onebeam_processing.sh  run_plots.py  run_processing.sh  run_vastfast.ini  select_candidates.py  setup.py  submit_vastfast_jobs.sh
collections/: pyproject.toml  run_cube.py  run_cube_gaussian.py  run_plots_for_all_candidates.py  select_candidates_old.py
data/: app_settings.ini
docker/pyregion/: Dockerfile
docker/python/: Dockerfile
docker/test/: Dockerfile  test.py
docker/ubuntu/: Dockerfile.sample
examples/: bash_GETDATA_beam00.sh  bash_PROCESSING_beam00.sh  imaging_parameters.yml  kill_all_jobs.sh  slurm_FIXDATA.sh  slurm_FIXDATA_beam00.sh  slurm_IMGFAST_beam00.sh  slurm_MODELING.sh  slurm_MODELING_beam00.sh  slurm_SELCAND_beam00.sh  submit_beam00.sh  submit_onebeam.sh
imaging/: model_making.py  model_making_emu.py  model_making_residual.py  model_making_vast.py  pre_makemodel.py  short_imaging.py  short_imaging_10m.py
notebooks/: parse_hpc_usage.ipynb  test_fits_cube_cutout.ipynb
prepare/: config.yml  for_bash.py  for_ozstar.py
src/vaster/: __init__.py  askapsoft_rescale.py  check_complete.py  check_measurements.py  email_alert.py  fix_dir.py  get_dyspec.py  get_footprints.py  inspect_usage.py  plot_candidates.py  prepare_data.py  prepare_scripts.py  run_bash_jobs.py  select_candidates.py  structure.py  submit_slurm_jobs.py  summarise_candidates.py  upload_realtime_candidates.py  vtools.py
src/vaster/vastfast/: cube.py  plot.py
tests/: test_local_rms.py  test_map.py  test_regression.py  test_regression_single_beam.py  test_regression_single_beam_gaussian.py  test_sigcube.py
tests/fixtures/beam14/: output_chisquare_cand.csv  output_lightcurve_local_rms.csv  output_lightcurve_peak_flux.csv  output_peak_cand.csv
tests/fixtures/detection_results/: output_cand.csv
tools/: askapsoft_rescale.py  check_complete.sh  check_folder_size.sh  clean_sbid.sh  clean_work_tree.sh  email_alert.py  fix_dir.py  generate_reg.py  get_everything_ready.py  get_everything_ready_for_bash.py  get_overall_table.py  relaunch_job.sh  relaunch_onebeam.sh  run_dyspec_sbid.py  submit_onebeam.sh
vastfast/: cube.py  exceptions.py  fastFunc.py  get_everything_ready.py  get_ready.py  input.py  plot.py  procedures.py  setting.py  utils.py
(+8 files in other folders)
