[tool.poetry]
name = "vastfast"
version = "0.1.0"
description = ""
authors = ["  < >"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0,<1.23.2"
scipy = "^1.5.2"
pyregion ="<2.1.1"
astropy = "^5.1"
aplpy = "^2.1.0"
matplotlib = "^3.5.2"
scikit-image = "^0.19.3"
dask = {extras = ["complete"], version = "^2022.9.1"}
bokeh = "^2.4.3"
ipycytoscape = "^1.3.3"
dask-jobqueue = "^0.8.0"

[tool.poetry.dev-dependencies]
memory-profiler = "^0.60.0"
line-profiler = "^3.5.1"
snakeviz = "^2.1.1"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
viztracer = "^0.15.4"
graphviz = "^0.20.1"
gprof2dot = "^2022.7.29"
py-spy = "^0.3.13"
ipykernel = "^6.15.2"
jupyter-contrib-nbextensions = "^0.5.1"
pandas = "^1.4.4"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
