[tool.poetry]
name = "vast-fastdetection"
version = "0.1.0"
description = ""
authors = ["Yuanming Wang ywan@swin.edu.au", "Dougal Dobie <ddobie@swin.edu.au>"]

[tool.poetry.dependencies]
python = "^3.9"
aplpy="^2.1.0"
astropy="^5.3.4"
astroquery="^0.4"
matplotlib="<3.6.0"
numpy="^1.23"
python-casacore="3.5.1"
scipy="^1.11.3"
scikit-image="^0.22.0"
xmltodict="^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
